--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <p>
                 You might saw me jumping,Climbing buildings,and stopping trains.But nobody pays me a dime for that work.
             </p>
+            <a target="_blank" href="https://www.linkedin.com/in/md-fuadul-islam-redoy-73b994179/"></a>
             
         </div>
         <div class="half-width">
